DDP-983 [TMS] Implement portlet with Spring + Thymeleaf + Bootstrap CSS

--- a/tms_thymeleaf/tms-portlet/src/main/webapp/html/thymeleaf/view.html
+++ b/tms_thymeleaf/tms-portlet/src/main/webapp/html/thymeleaf/view.html
@@ -1,5 +1,5 @@
 <div xmlns:th="http://www.thymeleaf.org">
-	User ID  = <span th:text="${themeDisplay.getUserId()}">123</span>
+<!-- 	User ID  = <span th:text="${themeDisplay.getUserId()}">123</span> -->
 	
 	<br />
 	
